@@ -1,3 +1,7 @@
+2017-06-09  Tamar Christina  <tamar.christina@arm.com>
+
+	* config/arm/arm.c (arm_rtx_costs_internal): Make sdiv more expensive than udiv.
+
 2017-06-09  Tom de Vries  <tom@codesourcery.com>
 
 	PR target/80855
